--- a/.github/workflows/build-book.yml
+++ b/.github/workflows/build-book.yml
@@ -13,13 +13,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install Pandoc + LaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            pandoc \
-            texlive-xetex texlive-fonts-recommended texlive-latex-extra \
-            fonts-firacode
+      - name: Set up Pandoc + LaTeX
+        uses: docker://pandoc/latex:latest
 
       - name: Generate chapters.txt
         working-directory: book
